fixed spacing, font sizes, in section CPO and PA

--- a/scss/_sectionCPO.scss
+++ b/scss/_sectionCPO.scss
@@ -5,6 +5,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 1rem;
+
+    @include mq($desktop-general-width) {
+        margin-top: 2.5rem;
+    }
     
 
     .container-cpo-h3 {
@@ -13,6 +18,10 @@
 
         @include mq($tablet-width) {
             max-width: fit-content;
+        }
+
+        @include mq($desktop-general-width) {
+            margin-bottom: 0.5rem;
         }
 
     }
@@ -33,11 +42,7 @@
 
     .container-cpo-articles {
         @include mq($tablet-width) {
-            // display: flex;
-            // flex-direction: row;
-            // justify-content: center;
             max-width: rem(800);
-            // height: auto;
             text-align: center;
 
             display: grid;
@@ -75,6 +80,7 @@
 
                     @include mq($tablet-width) {
                         margin: 0;
+                        width: rem(160);
                     }
 
                     @include mq($desktop-general-width) {
@@ -102,6 +108,7 @@
                 
                 @include mq($tablet-width) {
                     display: block;
+                    margin-top: 1rem;
                 }
 
                 @include mq($desktop-general-width) {
