--- a/scss/_sectionPA.scss
+++ b/scss/_sectionPA.scss
@@ -69,7 +69,7 @@
                 border: 0;
                 width: 100%; 
                 padding: 0.8rem 0.5rem; 
-                margin: 0.5rem 0 1rem; /* Add some margin */
+                margin: 0.5rem 0 1rem;
                 background-color: #BBBBBB; 
                 cursor: pointer; 
                 
@@ -85,7 +85,7 @@
                 }
 
                 @include mq($desktop-general-width) {
-                    padding: 1.2rem 0.5rem;
+                    padding: 1.2rem 1.2rem;
                 }
             }
         }
@@ -100,7 +100,8 @@
         margin: 2.5rem 0 4.5rem;
 
         @include mq($desktop-general-width) {
-            height: 70px
+            height: 70px;
+            margin: 2rem 0 6rem;
         }
     }
 }
